Fixed Services Section Mobile Width

--- a/styles.css
+++ b/styles.css
@@ -445,7 +445,7 @@ p {
 }
 
 .services-item { /*Service item container */
-  flex-basis: 80%;
+  flex-basis: 90%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -453,7 +453,7 @@ p {
   border-radius: 5px;
   background-image: url('./img/img-12.jpg');
   background-size: cover;
-  margin: 10px 5%;
+  margin: 15px 5%;
   position: relative;
   z-index: 1;
   overflow: hidden;
